# envifrog

./: .gitignore  README.md  pyproject.toml
docs/: README.md  basics.md  cli.md  fields.md  nested_configs.md  secrets.md  watching.md
src/envifrog/: __init__.py  base.py  cli.py  exceptions.py  fields.py  utils.py
tests/: test_advanced.py  test_comprehensive.py  test_core.py  test_features.py
